--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <!-- menu -->
         <nav class="lista">
             <ul>
-                <li>Home</li>
-                <li>Produtos</li>
+                <a href="index.html">Home</a>
+                <a href="produtos.html">Produtos</a>
                 <li>Contato</li>
             </ul>
         </nav>
