--- a/produtos.html
+++ b/produtos.html
@@ -31,70 +31,70 @@
                 <!-- PRIMEIRA LINHA -->
                 <div class="produto">
                     <!-- img do produto -->
-                    <div class="img-produto-temp"></div>
+                    <img src="assets/produto-1.jpg" alt="Produto 1" class="img-produto-temp">
 
-                    <h2>Título do produto</h2>
+                    <h2>Placa de vídeo RTX 4080 Super</h2>
 
-                    <p>Descrição do produto: Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero obcaecati earum repudiandae totam recusandae eum.</p>
+                    <p>Potência máxima para games em 4K e criação de conteúdo avançada. Ray Tracing e DLSS 3 para gráficos realistas e alto desempenho.</p>
 
-                    <span>R$ 25,00 / cada</span>
+                    <span>R$ 8.499,99 / cada</span>
                 </div>
 
                 <div class="produto">
                     <!-- img do produto -->
-                    <div class="img-produto-temp"></div>
+                    <img src="assets/produto-2.jpg" alt="Produto 2" class="img-produto-temp">
 
-                    <h2>Título do produto</h2>
+                    <h2>Processador Intel Core i9 14900K</h2>
 
-                    <p>Descrição do produto: Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero obcaecati earum repudiandae totam recusandae eum.</p>
+                    <p>Desempenho extremo com 24 núcleos e frequência turbo de até 6.0GHz. Ideal para jogos e tarefas pesadas com máxima eficiência.</p>
 
-                    <span>R$ 25,00 / cada</span>
+                    <span>R$ 4.299,00 / cada</span>
                 </div>
 
                 <div class="produto">
                     <!-- img do produto -->
-                    <div class="img-produto-temp"></div>
+                    <img src="assets/produto-3.jpg" alt="Produto 3" class="img-produto-temp">
 
-                    <h2>Título do produto</h2>
+                    <h2>Teclado Mecânico Redragon Kumara RGB</h2>
 
-                    <p>Descrição do produto: Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero obcaecati earum repudiandae totam recusandae eum.</p>
+                    <p>Compacto e resistente, com switches Outemu e iluminação RGB personalizável. Ideal para precisão em jogos e durabilidade no uso diário.</p>
 
-                    <span>R$ 25,00 / cada</span>
+                    <span>R$ 280,64 / cada</span>
                 </div>
 
 
                 <!-- SEGUNDA LINHA -->
                 <div class="produto">
                     <!-- img do produto -->
-                    <div class="img-produto-temp"></div>
+                    <img src="assets/produto-4.jpeg" alt="Produto 4" class="img-produto-temp">
 
-                    <h2>Título do produto</h2>
+                    <h2>Controle Gamer 8BitDo Ultimate 2.4G Wireless</h2>
 
-                    <p>Descrição do produto: Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero obcaecati earum repudiandae totam recusandae eum.</p>
+                    <p>Controle sem fio com analógicos Hall Effect, botões traseiros programáveis e base de carregamento. Compatível com PC, Switch e dispositivos móveis.​</p>
 
-                    <span>R$ 25,00 / cada</span>
+                    <span>R$ 489,00 / cada</span>
                 </div>
 
                 <div class="produto">
                     <!-- img do produto -->
-                    <div class="img-produto-temp"></div>
+                    <img src="assets/produto-5.jpeg" alt="Produto 5" class="img-produto-temp">
 
-                    <h2>Título do produto</h2>
+                    <h2>Headset Gamer HyperX Cloud Stinger</h2>
 
-                    <p>Descrição do produto: Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero obcaecati earum repudiandae totam recusandae eum.</p>
+                    <p>Leve e confortável, com drivers de 50mm e microfone com cancelamento de ruído. Ideal para longas sessões de jogo com áudio imersivo.</p>
 
-                    <span>R$ 25,00 / cada</span>
+                    <span>R$ 169,90 / cada</span>
                 </div>
 
                 <div class="produto">
                     <!-- img do produto -->
-                    <div class="img-produto-temp"></div>
+                    <img src="assets/produto-6.jpeg" alt="Produto 6" class="img-produto-temp">
 
-                    <h2>Título do produto</h2>
+                    <h2>Mouse Gamer Redragon M686 Vampire Elite</h2>
 
-                    <p>Descrição do produto: Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero obcaecati earum repudiandae totam recusandae eum.</p>
+                    <p>Mouse sem fio com sensor de 16.000 DPI, iluminação RGB e 8 botões programáveis. Ideal para precisão e personalização em jogos competitivos.​</p>
 
-                    <span>R$ 25,00 / cada</span>
+                    <span>R$ 259,90 / cada</span>
                 </div>
             </div>
         </section>
