--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <a href="index.html">Home</a>
                 <a href="produtos.html">Produtos</a>
-                <li>Contato</li>
+                <a href="contato.html">Contato</a>
             </ul>
         </nav>
     </header>
