--- a/produtos.html
+++ b/produtos.html
@@ -21,7 +21,7 @@
             <ul>
                 <a href="index.html">Home</a>
                 <a href="produtos.html">Produtos</a>
-                <li>Contato</li>
+                <a href="contato.html">Contato</a>
             </ul>
         </nav>
     </header>
