--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                 <div class="detalhes-escrita">
                     <h1>Serviços oferecidos</h1>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora similique, quos amet cumque excepturi quia, nulla facere, quis est omnis beatae? Libero, veniam reiciendis amet odit voluptates laudantium architecto quos!
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus dolores eos, obcaecati quas nihil modi. Consequuntur error quos, ducimus quia ipsam explicabo dolorem aliquam, voluptates excepturi doloribus delectus aperiam eius?
+                        Na Loja do Florindo, oferecemos consultoria personalizada para montar ou melhorar seu setup. Ajudamos você a escolher as melhores peças conforme sua necessidade e orçamento. Também realizamos manutenção preventiva e corretiva, montagem de computadores e orientações sobre upgrades. Seu PC do jeito que você sempre quis!
                     </p>
                 </div>
 
@@ -75,8 +74,7 @@
                 <div class="detalhes-escrita">
                     <h1>Produtos disponíveis</h1>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora similique, quos amet cumque excepturi quia, nulla facere, quis est omnis beatae? Libero, veniam reiciendis amet odit voluptates laudantium architecto quos!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam id explicabo soluta labore magni ipsum et aspernatur laudantium consectetur ullam, corporis velit fuga quidem maiores. Molestiae hic neque tenetur necessitatibus.
+                        Trabalhamos com uma variedade de peças e acessórios para computadores: placas-mãe, processadores, memórias RAM, SSDs, fontes, gabinetes, periféricos e muito mais. Todos os nossos produtos são testados, originais e com garantia. Se precisar de algo específico, podemos ajudar você a encontrar e encomendar com toda segurança.
                     </p>
                 </div>
 
@@ -84,8 +82,7 @@
                 <div class="detalhes-escrita">
                     <h1>Suporte ao cliente</h1>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora similique, quos amet cumque excepturi quia, nulla facere, quis est omnis beatae? Libero, veniam reiciendis amet odit voluptates laudantium architecto quos!
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit minima porro officia autem eos dolorum commodi! Quas quam laboriosam repellendus ad, quasi illo qui eum repudiandae quo sunt minus nisi.
+                        Prezamos por um atendimento próximo e eficiente. Caso tenha dúvidas na escolha de peças ou precise de suporte técnico, conte com a gente! Atendemos por e-mail, redes sociais e WhatsApp, sempre com agilidade e clareza. Nosso objetivo é garantir que você fique satisfeito e tenha uma ótima experiência com a Loja do Florindo.
                     </p>
                 </div>
             </section>
@@ -108,9 +105,10 @@
         <!-- redes sociais -->
         <nav>
             <ul>
-                <li><img src="assets/facebook.svg" alt="face-icon"> Facebook</li>
-                <li><img src="assets/instagram.svg" alt="face-icon"> instagram</li>
-                <li><img src="assets/twitter-x.svg" alt="face-icon"> Twitter</li>
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.svg" alt="face-icon"> Facebook</a></li>
+                <li><a href="https://www.instagram.com/gabb._flor/" target="_blank"><img src="assets/instagram.svg" alt="insta-icon"> instagram</a></li>
+                <li><a href="https://x.com" target="_blank"><img src="assets/twitter-x.svg" alt="twitter-icon"> Twitter</a></li>
+                <li><a href="https://github.com/GabbFlor/Loja-do-flor" target="_blank"><img src="assets/github.svg" alt="github-icon"> Github</a></li>
             </ul>
         </nav>
     </footer>
