--- a/contato.html
+++ b/contato.html
@@ -25,7 +25,7 @@
 
     <main class="main-contato">
         <section>
-            <h1>Formulário de contato</h1>
+            <h1>💬 Formulário de contato 💬</h1>
 
             <form method="GET" class="contato-form">
                 <div>
@@ -63,9 +63,10 @@
         <!-- redes sociais -->
         <nav>
             <ul>
-                <li><img src="assets/facebook.svg" alt="face-icon"> Facebook</li>
-                <li><img src="assets/instagram.svg" alt="face-icon"> instagram</li>
-                <li><img src="assets/twitter-x.svg" alt="face-icon"> Twitter</li>
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.svg" alt="face-icon"> Facebook</a></li>
+                <li><a href="https://www.instagram.com/gabb._flor/" target="_blank"><img src="assets/instagram.svg" alt="insta-icon"> instagram</a></li>
+                <li><a href="https://x.com" target="_blank"><img src="assets/twitter-x.svg" alt="twitter-icon"> Twitter</a></li>
+                <li><a href="https://github.com/GabbFlor/Loja-do-flor" target="_blank"><img src="assets/github.svg" alt="github-icon"> Github</a></li>
             </ul>
         </nav>
     </footer>
