--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Flor store</title>
+    <link rel="shortcut icon" href="./assets/icone-loja.png" type="image/x-icon">
 </head>
 <body>
     <header>
-        <div class="logo">
+        <a href="index.html" class="logo">
             <img src="assets/icone-loja.png" alt="logo-loja">
             <h1>🌟Loja do Florindo🌟</h1>
-        </div>
+        </a>
 
         <!-- menu -->
         <nav class="lista">
