--- a/produtos.html
+++ b/produtos.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flor store - produtos</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./assets/icone-loja.png" type="image/x-icon">
 </head>
 <body class=".body-class">
     <!-- Chamando o script para funcionar o pop-up -->
     <script src="scripts/Pop-up.js"></script>
 
     <header>
-        <div class="logo">
+        <a href="index.html" class="logo">
             <img src="assets/icone-loja.png" alt="logo-loja">
             <h1>🌟Loja do Florindo🌟</h1>
-        </div>
+        </a>
 
         <!-- menu -->
         <nav class="lista">
