--- a/contato.html
+++ b/contato.html
@@ -20,6 +20,7 @@
                 <a href="index.html">Home</a>
                 <a href="produtos.html">Produtos</a>
                 <a href="contato.html">Contato</a>
+                <a href="encomendas.html">Encomendas</a>
             </ul>
         </nav>
     </header>
