--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <a href="index.html">Home</a>
                 <a href="produtos.html">Produtos</a>
                 <a href="contato.html">Contato</a>
+                <a href="encomendas.html">Encomendas</a>
             </ul>
         </nav>
     </header>
