--- a/encomendas.html
+++ b/encomendas.html
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="div-buttons-form-encomenda">
-                    <button type="button">Limpar</button>
+                    <button type="button" id="limpar-form">Limpar</button>
 
                     <button type="submit" id="adicionar-encomenda">Adicionar</button>
                 </div>
@@ -101,7 +101,6 @@
         </section>
 
         <script src="scripts/encomendas.js"></script>
-        <script src="scripts/adicionar_encomenda.js"></script>
     </main>
 
     <footer>
