--- a/encomendas.html
+++ b/encomendas.html
@@ -40,6 +40,7 @@
                         <th>Valor un.</th>
                         <th>Quantidade</th>
                         <th>Total</th>
+                        <th>Ações</th>
                     </tr>
                 </thead>
 
