--- a/encomendas.html
+++ b/encomendas.html
@@ -31,6 +31,8 @@
         </section>
 
         <section class="div-table">
+            <input type="text" id="input-pesquisa">
+
             <table>
                 <thead>
                     <tr>
