--- a/encomendas.html
+++ b/encomendas.html
@@ -103,6 +103,7 @@
             </form>
         </section>
 
+        <script src="scripts/connectAPI.js"></script>
         <script src="scripts/encomendas.js"></script>
     </main>
 
